--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,14 @@
+# datasource
 spring.datasource.url=jdbc:h2:mem:deneb1593
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
+# sql
+spring.sql.init.platform=h2
+spring.sql.init.schema-locations=classpath:sql/schema-h2.sql
+
+# h2
 spring.h2.console.path=/h2-console
 spring.h2.console.enabled=true
