--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.datasource.url=jdbc:h2:mem:deneb1593
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.password=ENC(NO7EwfL+O8wjagn3tKfYZA==)
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 # sql
@@ -12,3 +12,7 @@ spring.sql.init.schema-locations=classpath:sql/schema-h2.sql
 # h2
 spring.h2.console.path=/h2-console
 spring.h2.console.enabled=true
+
+# jasypt
+jasypt.encryptor.bean=encryptor
+jasypt.encryptor.password=2fUcD+3+g53BZkMNVDgRufL7ULuSf8r5
