--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.datasource.url=jdbc:h2:mem:deneb1593
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=ENC(NO7EwfL+O8wjagn3tKfYZA==)
+spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 # sql
