--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 # sql
 spring.sql.init.platform=h2
 spring.sql.init.schema-locations=classpath:sql/schema-h2.sql
+spring.sql.init.data-locations=classpath:sql/data-h2.sql
 
 # h2
 spring.h2.console.path=/h2-console
